--- a/src/@fuse/components/navigation/vertical/styles/appearances/default.scss
+++ b/src/@fuse/components/navigation/vertical/styles/appearances/default.scss
@@ -483,7 +483,7 @@ fuse-vertical-navigation-collapsable-item {
             &:not(.fuse-vertical-navigation-item-disabled) {
                 &.fuse-vertical-navigation-item-active,
                 &.fuse-vertical-navigation-item-active-forced {
-                    @apply bg-gray-800 bg-opacity-5 dark:bg-white dark:bg-opacity-12;
+                    @apply bg-black bg-opacity-5 dark:bg-black dark:bg-opacity-10;
 
                     .fuse-vertical-navigation-item-icon {
                         @apply opacity-100;
@@ -504,7 +504,7 @@ fuse-vertical-navigation-collapsable-item {
                     .fuse-vertical-navigation-item-active
                 ):not(.fuse-vertical-navigation-item-disabled) {
                 &:hover {
-                    @apply bg-gray-800 bg-opacity-5 dark:bg-white dark:bg-opacity-12;
+                    @apply bg-black bg-opacity-5 dark:bg-black dark:bg-opacity-10;
 
                     .fuse-vertical-navigation-item-icon {
                         @apply opacity-100;
