--- a/src/app/modules/admin/roles-and-permissions/components/manage-user/manage-user.component.html
+++ b/src/app/modules/admin/roles-and-permissions/components/manage-user/manage-user.component.html
@@ -1,15 +1,10 @@
-<section
-    class="m-5 sm:m-10 p-4 sm:py-6 w-full sm:px-8 bg-white rounded-lg flex flex-col gap-4 overflow-x-hidden"
->
+<section class="m-5 sm:m-10 p-4 sm:py-6 w-full sm:px-8 bg-white rounded-lg flex flex-col gap-4 overflow-x-hidden">
     <div class="flex items-center justify-between">
         <div class="flex flex-col gap-2 justify-items-start">
             <!-- Breadcrumb -->
             <div class="sm:flex hidden gap-2 items-center">
-                <mat-icon
-                    class="text-black hover:text-myAccent transition-all w-[22px] h-[22px] cursor-pointer"
-                    svgIcon="heroicons_outline:home"
-                    (click)="navigateToHome()"
-                >
+                <mat-icon class="text-black hover:text-myAccent transition-all w-[22px] h-[22px] cursor-pointer"
+                    svgIcon="heroicons_outline:home" (click)="navigateToHome()">
                 </mat-icon>
                 <p>Roles and Permissions</p>
                 <span>/</span>
@@ -20,7 +15,8 @@
             <h3 class="font-bold text-[1.3rem]">Manage User</h3>
         </div>
 
-        <div class="flex items-center gap-4">
+        <!-- Export SVG's -->
+        <!-- <div class="flex items-center gap-4">
             <svg
                 matTooltip="Export as PDF"
                 version="1.0"
@@ -100,74 +96,40 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                     />
                 </g>
             </svg>
-        </div>
+        </div> -->
     </div>
 
     <!-- Content -->
-    <div
-        class="flex w-full flex-col md:flex-row gap-4 justify-center items-center"
-    >
+    <div class="flex w-full flex-col md:flex-row gap-4 justify-center items-center">
         <!-- Search -->
-        <div
-            class="border border-myAccent w-full flex items-center justify-between rounded pr-2"
-        >
-            <input
-                type="search"
-                name="user-search"
-                id="user-search"
-                (keyup)="searchAccount($event)"
-                placeholder="Search "
-                class="px-4 py-2 w-full rounded caret-myAccent"
-            />
+        <div class="border border-myAccent w-full flex items-center justify-between rounded pr-2">
+            <input type="search" name="user-search" id="user-search" (keyup)="searchAccount($event)"
+                placeholder="Search " class="px-4 py-2 w-full rounded caret-myAccent" />
 
-            <mat-icon
-                class="text-myAccent w-[24px] h-[24px] cursor-pointer search-icon"
-                svgIcon="heroicons_outline:search"
-            ></mat-icon>
+            <mat-icon class="text-myAccent w-[24px] h-[24px] cursor-pointer search-icon"
+                svgIcon="heroicons_outline:search"></mat-icon>
         </div>
 
         <mat-form-field appearance="fill" class="mt-0 w-full">
-            <mat-date-range-input
-                [rangePicker]="picker"
-                placeholder="Select Date"
-            >
-                <input
-                    matStartDate
-                    placeholder="Start date"
-                    [(ngModel)]="getUserModal.startDate"
-                    (dateChange)="dateFilter()"
-                />
-                <input
-                    matEndDate
-                    placeholder="End date"
-                    [(ngModel)]="getUserModal.endDate"
-                    (dateChange)="dateFilter()"
-                />
+            <mat-date-range-input [rangePicker]="picker" placeholder="Select Date">
+                <input matStartDate placeholder="Start date" [(ngModel)]="getUserModal.startDate"
+                    (dateChange)="dateFilter()" />
+                <input matEndDate placeholder="End date" [(ngModel)]="getUserModal.endDate"
+                    (dateChange)="dateFilter()" />
             </mat-date-range-input>
 
-            <mat-icon
-                matDatepickerToggleIcon
-                class="cursor-pointer"
-                (click)="clearDate()"
-                *ngIf="
+            <mat-icon matDatepickerToggleIcon class="cursor-pointer" (click)="clearDate()" *ngIf="
                     getUserModal.startDate != null &&
                     getUserModal.endDate != null
-                "
-                >clear</mat-icon
-            >
+                ">clear</mat-icon>
 
-            <mat-datepicker-toggle
-                class="text-myAccent w-7"
-                matIconSuffix
-                [for]="picker"
-            ></mat-datepicker-toggle>
+            <mat-datepicker-toggle class="text-myAccent w-7" matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
 
         <button
-            class="px-10 border text-textColor hover:border-darkAccent border-accentHover shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
-            (click)="addUser()"
-        >
+            class="px-10 border text-textColor hover:border-accentHover border-darkAccent  py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
+            (click)="addUser()">
             <p class="font-semibold">Add User</p>
             <!-- <mat-icon
                 class="text-white w-[24px] h-[24px] px-0"
@@ -178,16 +140,12 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
 
     <!-- Angular Table -->
     <div class="whitespace-nowrap w-full overflow-x-scroll shadow rounded-lg">
-        <table
-            mat-table
-            [dataSource]="dataSource"
-            class="mat-elevation-z8 w-full"
-        >
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>SN</th>
                 <td mat-cell *matCellDef="let element; let i = index">
                     {{
-                        paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
+                    paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
                     }}
                 </td>
             </ng-container>
@@ -226,30 +184,17 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 </th>
                 <td mat-cell *matCellDef="let element">
                     <div class="flex gap-2 justify-center sm:justify-end">
-                        <button
-                            matTooltip="Edit Category"
-                            (click)="editUser(element)"
-                        >
+                        <button matTooltip="Edit Category" (click)="editUser(element)">
                             <!-- <mat-icon
                                 class="text-green-600"
                                 svgIcon="mat_outline:edit"
                             ></mat-icon> -->
 
-                            <img
-                                src="assets/icons/edit.svg"
-                                alt="Edit"
-                                class="w-[24px] h-[24px] cursor-pointer ml-5"
-                            />
+                            <img src="assets/icons/edit.svg" alt="Edit" class="w-[24px] h-[24px] cursor-pointer ml-5" />
                         </button>
-                        <button
-                            (click)="openDeleteDialog(element.id)"
-                            matTooltip="Delete Category"
-                        >
-                            <img
-                                src="assets\images\trash-can.png"
-                                alt="Delete"
-                                class="w-[24px] h-[24px] cursor-pointer"
-                            />
+                        <button (click)="openDeleteDialog(element.id)" matTooltip="Delete Category">
+                            <img src="assets\images\trash-can.png" alt="Delete"
+                                class="w-[24px] h-[24px] cursor-pointer" />
                         </button>
                     </div>
                 </td>
@@ -259,10 +204,6 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
 
-        <mat-paginator
-            #paginatorRef
-            [pageSizeOptions]="[5, 10, 25, 100]"
-            [showFirstLastButtons]="true"
-        ></mat-paginator>
+        <mat-paginator #paginatorRef [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true"></mat-paginator>
     </div>
 </section>
